@@ -4,7 +4,7 @@ project.depends.source=src
 
 # with the current filesize, we could add the kitchen sink too!
 project.depends.lib=phetcommon piccolo-phet chemistry jme3/jMonkeyEngine3.jar jme3/lib/lwjgl.jar jme3/lib/vecmath.jar jme3/lib/jME3-lwjgl-natives.jar
-project.flavor.molecule-shapes.mainclass=edu.colorado.phet.moleculeshapes.jme.ShowMolecule
+project.flavor.molecule-shapes.mainclass=edu.colorado.phet.moleculeshapes.jme.MoleculeApplication
 project.flavor.molecule-shapes.args=
 
 #Request all permissions since it requires native binaries for the OpenGL bindings
